- TODO: Match startfac / startpara / startlatent / startlatent0 / startfacload
        with output (maybe restructure into startvals?)
- TODO: Allow also for ones in the loadings matrix a priori (not only zeros)
- TODO: Preparation works for including the leverage effect that became
        available in stochvol 2.0.0.

Changes in version 0.9.2
  - Slight change in the "front-end" function fsvsample: the argument
    "priorfacload" must now be positive, its meaning depends on the value of
    the argument "priorfacloadtype" (new argument). The argument "columnwise"
    has been removed. Sorry for any inconvenience this change may cause.
  - It's now possible to turn factor sampling off. This might be useful if one
    wants to include observed factors (instead of latent ones).
  - The function predloglik now takes an optional logical vector indicating
    for which component series the predictive log likelihood should be computed.
    Thanks to Stefan Voigt for implementing this.
  - Fixed a few more typos in the documentation.
  - The function corimageplot now has a new argument: these4order.
  - Some default settings have changed:
    * priorfacloadtype = "rowwiseng" (was: "normal")
    * priorfacload = 0.1 (was 1)
    * runningstore = 6 (was: 1)
  - Arguments to fsvsample were reordered.
  - Previous default plotting function plot.fsvsdraws has been renamed to
    plotalot. New default plotting function now shows a correlation matrix.
  - New generic extractor: cormat (cormat.fsvdraws and cormat.fsvsim)
  - Fixed namespace clashes between stochvol and factorstochvol (concerned
    logret and paratraceplot); now DEPENDS on stochvol

Changes in version 0.9.1
  - Default for argument "restrict" in fsvsample is now "none". This
    alleviates the problem of (potentially) introducing arbitrary zeros which
    are not in line with the data.
  - Fixed glitches in the documentation. Thanks to Gregor Zens for pointing
    these out.

Changes in version 0.9