@@ -48,7 +48,9 @@ importFrom(GIGrvg,rgig)
 importFrom(Rcpp,evalCpp)
 importFrom(corrplot,corrMatOrder)
 importFrom(corrplot,corrplot)
+importFrom(grDevices,col2rgb)
 importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,palette)
 importFrom(grDevices,rainbow)
 importFrom(grDevices,rgb)
 importFrom(graphics,abline)
