@@ -1,5 +1,4 @@
-- TODO: Match startfac / startpara / startlatent / startlatent0 / startfacload
-        with output (maybe restructure into startvals?)
+- TODO: rename output values of fsvsample
 - TODO: Allow also for ones in the loadings matrix a priori (not only zeros)
 - TODO: Preparation works for including the leverage effect that became
         available in stochvol 2.0.0.
@@ -9,6 +8,11 @@ Changes in version 0.9.2
     "priorfacload" must now be positive, its meaning depends on the value of
     the argument "priorfacloadtype" (new argument). The argument "columnwise"
     has been removed. Sorry for any inconvenience this change may cause.
+  - The structure of the argument "startfacload" to fsvsample has changed to
+    match the output structure of fsvsample. Thanks to Gregor Zens for pointing
+    this out. Moreover, "startlatent" and "startlatent0" were renamed to
+    "startlogvar" and "startlogvar0", respectively. Sorry for any inconvenience
+    this change may cause.
   - It's now possible to turn factor sampling off. This might be useful if one
     wants to include observed factors (instead of latent ones).
   - The function predloglik now takes an optional logical vector indicating
